# Alpha-house

./: README.md  STARTUP.md  main.go  start-all.sh
backend/: .env.example  .gitignore  README.md  go.mod  main.go
frontend/: package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/proxy-image/: route.ts
frontend/app/api/try-on/: route.ts
frontend/app/feed/: data.json  page.tsx
frontend/app/products/[id]/: data.json  page.tsx
frontend/app/products/[id]/product/[productId]/: page.tsx
frontend/app/streaming/: page.tsx
frontend/components/: BottomNavigation.tsx  ErrorMessage.tsx  LoadingSpinner.tsx  VirtualTryOnModal.tsx  index.ts
frontend/lib/: api.ts
python/: 20251130_011016.txt  README.md  decode_image.py  encode_image.py  main.py  pyproject.toml  shopping.txt  test1.txt
