[project]
name = "virtual-tryon"
version = "0.1.0"
description = "A FastAPI application for virtual try-on using Gemini."
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "google-generativeai>=0.3.1",
    "Pillow>=10.1.0",
    "python-dotenv>=1.0.0",
    "google-genai>=1.47.0",
]

# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"
